--- a/src/screen/styles/Hero.css
+++ b/src/screen/styles/Hero.css
@@ -147,7 +147,7 @@
 }
 
 .hero-img {
-	background-image: url('/public/hero.jpg');
+	background-image: url('/public/hero.jpeg');
 	width: 30rem;
 	height: 30rem;
 	background-size: cover;
