--- a/src/screen/styles/index.css
+++ b/src/screen/styles/index.css
@@ -78,3 +78,8 @@ body {
 ::-webkit-scrollbar-thumb:active {
   background-color: #8e8e8e
 }
+
+.switcher select {
+  width: 99px;
+  height: 30px;
+}
