--- a/src/screen/styles/Nav.css
+++ b/src/screen/styles/Nav.css
@@ -28,6 +28,13 @@ nav ul {
 
 .switcher {
 	display: flex;
+	align-items: center;
+	margin-left: 20px;
+}
+
+.switcher select {
+  width: 99px;
+  height: 30px;
 }
 
 @media (max-width: 900px) {
@@ -65,6 +72,17 @@ nav ul a:hover {
 .switcherM {
 	display: none;
 	margin-top: 100px;
+	flex-direction: column;
+}
+
+.switcherM span {
+	font-size: 2rem;
+	margin-bottom: 10px;
+}
+
+.switcherM select {
+  width: 99px;
+  height: 30px;
 }
 
 .mobile-menu:hover {
