--- a/src/screen/styles/Nav.css
+++ b/src/screen/styles/Nav.css
@@ -29,12 +29,12 @@ nav ul {
 .switcher {
 	display: flex;
 	align-items: center;
-	margin-left: 20px;
 }
 
 .switcher select {
-  width: 99px;
-  height: 30px;
+  width: 70px;
+  height: 20px;
+	border: 2px solid #2d2e32;
 }
 
 @media (max-width: 900px) {
