--- a/src/screen/styles/Nav.css
+++ b/src/screen/styles/Nav.css
@@ -77,8 +77,10 @@ nav ul a:hover {
 }
 
 .switcherM select {
-  width: 99px;
+  width: 85px;
   height: 30px;
+	border: 2px solid #32333596;
+	border-radius: 5px;
 }
 
 .mobile-menu:hover {
