--- a/src/screen/styles/Hero.css
+++ b/src/screen/styles/Hero.css
@@ -19,6 +19,7 @@
 	align-items: center;
 	gap: 10rem;
 	position: relative;
+	padding-bottom: 50px;
 }
 @media (max-width: 900px) {
 	.hero-main {
@@ -26,6 +27,7 @@
 		text-align: center;
 		height: auto;
 		gap: 3rem;
+		padding-bottom: 0;
 	}
 }
 
@@ -33,7 +35,7 @@
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	height: 80rem;
+	height: 90rem;
 	gap: 10rem;
 	position: relative;
 }
