--- a/src/screen/styles/Footer.css
+++ b/src/screen/styles/Footer.css
@@ -37,3 +37,22 @@ footer h3 {
   transform: scale(1.2);
   transition: all 0.2s ease-in-out;
 }
+
+
+.switcher {
+	display: flex;
+	align-items: center;
+}
+
+.switcher select {
+  width: 85px;
+  height: 30px;
+	border: 2px solid #c1ceff96;
+	border-radius: 5px;
+}
+
+@media (max-width: 900px) {
+	.switcher {
+		display: none;
+	}
+}
