--- a/src/screen/styles/Hero.css
+++ b/src/screen/styles/Hero.css
@@ -2,7 +2,8 @@
 	display: flex;
 	flex-direction: column;
 	width: 100%;
-	height: 100vh;
+	height: auto;
+	padding-bottom: 10px;
 	background-color: #f9f9f9;
 	position: relative;
 }
